hphp/test/zend/good/ext/openssl/tests/bug28382.php.skipif
<?php 
if (!extension_loaded("openssl")) die("skip"); 
if (OPENSSL_VERSION_NUMBER<0x009070af) die("skip");
?>