hphp/test/zend/bad/ext/openssl/tests/openssl_x509_parse_basic_v9.php.skipif
<?php if (!extension_loaded("openssl")) print "skip"; 
if (OPENSSL_VERSION_NUMBER > 0x10000000) die("skip Output requires OpenSSL 0.9");
?>